feat: add mocks
