# internal/api/controller/customer_controller.go
@@ -3,11 +3,11 @@ package controller
 import (
 	"encoding/json"
 	"github.com/go-chi/chi/v5"
-	"github.com/oprimogus/cardapiogo/internal/application/api/middleware"
-	"github.com/oprimogus/cardapiogo/internal/application/customer"
+	"github.com/oprimogus/cardapiogo/internal/api/middleware"
 	"github.com/oprimogus/cardapiogo/internal/config"
+	"github.com/oprimogus/cardapiogo/internal/core/address"
+	"github.com/oprimogus/cardapiogo/internal/core/customer"
 	"github.com/oprimogus/cardapiogo/internal/infrastructure/database/persistence"
-	"github.com/oprimogus/cardapiogo/internal/infrastructure/services/adapter"
 	"github.com/oprimogus/cardapiogo/internal/infrastructure/services/zitadel"
 	"github.com/oprimogus/cardapiogo/internal/xvalidator"
 	"net/http"
@@ -126,7 +126,105 @@ func (c customerController) updateCustomerProfile(w http.ResponseWriter, r *http
 	w.WriteHeader(http.StatusOK)
 }
 
-func SetupCustomerRoutes(r *chi.Mux, repoFactory persistence.RepositoryFactory, services adapter.Factory) {
+// addAddress godoc
+//
+//	@Summary		Add new address to customer
+//	@Description	Add new address to customer
+//	@Tags			Customer Profile Management
+//	@Accept			json
+//	@Produce		json
+//	@Security		BearerAuth
+//	@Param			Authorization	header		string						true	"Bearer authentication token"
+//	@Param			request			body		address.Address	true	"Address Model"
+//	@Success		200				{object}	nil							"Address added to user"
+//	@Failure		400				{object}	xerrors.CustomError			"Invalid request data or malformed JSON"
+//	@Failure		401				{object}	xerrors.CustomError			"Unauthorized - authentication required"
+//	@Failure		403				{object}	xerrors.CustomError			"Forbidden - insufficient permissions"
+//	@Failure		404				{object}	xerrors.CustomError			"Customer profile not found"
+//	@Failure		422				{object}	xerrors.CustomError			"Validation error - invalid profile details"
+//	@Failure		500				{object}	xerrors.CustomError			"Internal server error"
+//	@Router			/v1/customer/address [post]
+func (c customerController) addAddress(w http.ResponseWriter, r *http.Request) {
+	zt := zitadel.GetInstance()
+	authCtx := zt.Middleware.Context(r.Context())
+	userID, err := strconv.Atoi(authCtx.UserID())
+	if err != nil {
+		HandleError(w, r, err)
+		return
+	}
+
+	var params address.Address
+	err = json.NewDecoder(r.Body).Decode(&params)
+	if err != nil {
+		HandleError(w, r, err)
+		return
+	}
+
+	err = c.validator.Validate(params)
+	if err != nil {
+		HandleError(w, r, err)
+		return
+	}
+
+	err = c.customerService.AddAddress(r.Context(), userID, params)
+	if err != nil {
+		HandleError(w, r, err)
+		return
+	}
+
+	w.WriteHeader(http.StatusOK)
+}
+
+// removeAddress godoc
+//
+//	@Summary		Remove an address to customer
+//	@Description	Remove an address to customer
+//	@Tags			Customer Profile Management
+//	@Accept			json
+//	@Produce		json
+//	@Security		BearerAuth
+//	@Param			Authorization	header		string						true	"Bearer authentication token"
+//	@Param			request			body		address.Address	true	"Address Model"
+//	@Success		200				{object}	nil							"Address removed from user"
+//	@Failure		400				{object}	xerrors.CustomError			"Invalid request data or malformed JSON"
+//	@Failure		401				{object}	xerrors.CustomError			"Unauthorized - authentication required"
+//	@Failure		403				{object}	xerrors.CustomError			"Forbidden - insufficient permissions"
+//	@Failure		404				{object}	xerrors.CustomError			"Customer profile not found"
+//	@Failure		422				{object}	xerrors.CustomError			"Validation error - invalid profile details"
+//	@Failure		500				{object}	xerrors.CustomError			"Internal server error"
+//	@Router			/v1/customer/address [delete]
+func (c customerController) removeAddress(w http.ResponseWriter, r *http.Request) {
+	zt := zitadel.GetInstance()
+	authCtx := zt.Middleware.Context(r.Context())
+	userID, err := strconv.Atoi(authCtx.UserID())
+	if err != nil {
+		HandleError(w, r, err)
+		return
+	}
+
+	var params address.Address
+	err = json.NewDecoder(r.Body).Decode(&params)
+	if err != nil {
+		HandleError(w, r, err)
+		return
+	}
+
+	err = c.validator.Validate(params)
+	if err != nil {
+		HandleError(w, r, err)
+		return
+	}
+
+	err = c.customerService.RemoveAddress(r.Context(), userID, params)
+	if err != nil {
+		HandleError(w, r, err)
+		return
+	}
+
+	w.WriteHeader(http.StatusOK)
+}
+
+func SetupCustomerRoutes(r *chi.Mux, repoFactory persistence.RepositoryFactory) {
 	basePath := config.GetInstance().Api.BasePath
 
 	validator := xvalidator.GetPtInstance()
@@ -141,5 +239,11 @@ func SetupCustomerRoutes(r *chi.Mux, repoFactory persistence.RepositoryFactory, 
 		r.
 			With(middleware.Authentication).
 			Put("/", c.updateCustomerProfile)
+		r.
+			With(middleware.Authentication).
+			Post("/address", c.addAddress)
+		r.
+			With(middleware.Authentication).
+			Delete("/address", c.removeAddress)
 	})
 }
